@@ -300,7 +300,7 @@ public class BulkHelper {
                     .filter(key -> key.getId() != null && !key.getId().equals("null"))
                     .map(caseId -> caseId.getValue().getEthosCaseReference())
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             return new ArrayList<>();
         }
@@ -311,7 +311,7 @@ public class BulkHelper {
                 .filter(key -> key.getId() != null)
                 .map(caseId -> caseId.getValue().getEthosCaseReferenceS())
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<CaseIdTypeItem> getCaseIdTypeItems(BulkDetails bulkDetails, List<String> multipleTypeItems) {
@@ -320,7 +320,7 @@ public class BulkHelper {
                 .filter(p -> p.getValue().getEthosCaseReference() != null)
                 .filter(distinctByKey(p -> p.getValue().getEthosCaseReference()))
                 .filter(p -> multipleTypeItems.contains(p.getValue().getEthosCaseReference()))
-                .collect(Collectors.toList())
+                .toList()
                 : new ArrayList<>();
     }
 
@@ -329,7 +329,7 @@ public class BulkHelper {
                 ? bulkDetails.getCaseData().getMultipleCollection().stream()
                 .map(caseId -> caseId.getValue().getEthosCaseReferenceM())
                 .distinct()
-                .collect(Collectors.toList())
+                .toList()
                 : new ArrayList<>();
     }
 
@@ -338,7 +338,7 @@ public class BulkHelper {
                 ? jurCodesTypeItems.stream()
                 .map(jurCodesTypeItem -> jurCodesTypeItem.getValue().getJuridictionCodesList())
                 .distinct()
-                .collect(Collectors.toList())
+                .toList()
                 : new ArrayList<>();
     }
 
@@ -363,7 +363,7 @@ public class BulkHelper {
                         jurCodesTypeItem.setId(code);
                         return jurCodesTypeItem;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return jurCodesTypeItems;
     }
@@ -510,7 +510,7 @@ public class BulkHelper {
         for (String caseId : caseIds) {
             int index = submitEvents.stream()
                     .map(submitEvent -> submitEvent.getCaseData().getEthosCaseReference())
-                    .collect(Collectors.toList())
+                    .toList()
                     .indexOf(caseId);
             if (index != -1) {
                 SubmitEvent submitEvent = submitEvents.get(index);
